Fixed Border not visible

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -12,7 +12,7 @@ span.language-flag {
 }
 
 img {
-    width: 100%;
+    width: 95%;
 }
 
 .select-image label > input[type=radio] {
